BUG#35599 Mysqld crash after delete records from table (with constraint violation)